clean up AptTest